# insights-python

./: .env.example  BEFORE_SEND.md  LLM.md  Makefile  README.md  example.py  mypy.ini  pyproject.toml  setup.py  setup_analytics.py
examples/: redis_flag_cache.py  remote_config.py
hanzo_insights/: __init__.py  args.py  client.py  consumer.py  contexts.py  exception_capture.py  exception_utils.py  feature_flags.py  flag_definition_cache.py  request.py  utils.py
hanzo_insights/ai/: __init__.py  prompts.py  types.py  utils.py
hanzo_insights/ai/anthropic/: anthropic.py  anthropic_async.py  anthropic_converter.py  anthropic_providers.py
hanzo_insights/ai/gemini/: gemini.py  gemini_async.py  gemini_converter.py
hanzo_insights/ai/langchain/: callbacks.py
hanzo_insights/ai/openai/: openai.py  openai_async.py  openai_converter.py  openai_providers.py
hanzo_insights/ai/openai_agents/: __init__.py  processor.py
hanzo_insights/integrations/: django.py
hanzo_insights/test/: __init__.py  test_before_send.py  test_client.py  test_consumer.py  test_contexts.py  test_exception_capture.py  test_feature_flag.py  test_feature_flag_result.py  test_feature_flags.py  test_flag_definition_cache.py  test_module.py  test_request.py  test_size_limited_dict.py  test_types.py  test_utils.py
hanzo_insights/test/ai/: test_prompts.py  test_sanitization.py  test_system_prompts.py  test_tokens_source.py
hanzo_insights/test/integrations/: test_middleware.py
hanzoanalytics/: __init__.py  args.py  client.py  consumer.py  contexts.py  exception_capture.py  exception_utils.py  feature_flags.py  flag_definition_cache.py  request.py  utils.py
hanzoanalytics/ai/: __init__.py  prompts.py  utils.py
hanzoanalytics/ai/anthropic/: anthropic.py  anthropic_async.py  anthropic_converter.py  anthropic_providers.py
hanzoanalytics/ai/gemini/: gemini.py  gemini_async.py  gemini_converter.py
hanzoanalytics/ai/langchain/: callbacks.py
hanzoanalytics/ai/openai/: openai.py  openai_async.py  openai_converter.py  openai_providers.py
hanzoanalytics/ai/openai_agents/: __init__.py  processor.py
hanzoanalytics/integrations/: django.py
hanzoanalytics/test/: __init__.py  test_before_send.py  test_client.py  test_consumer.py  test_contexts.py  test_exception_capture.py  test_feature_flag.py  test_feature_flag_result.py  test_feature_flags.py  test_flag_definition_cache.py  test_module.py  test_request.py  test_types.py  test_utils.py
hanzoanalytics/test/ai/: test_prompts.py  (+3 more)
insights/: __init__.py
integration_tests/django5/: test_exception_capture.py  test_middleware.py
sdk_compliance_adapter/: adapter.py
(+15 files in other folders)
