[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-insights"
version = "7.9.7"
description = "Integrate Hanzo Insights into any python application."
authors = [{ name = "Hanzo AI", email = "hey@hanzo.ai" }]
maintainers = [{ name = "Hanzo AI", email = "hey@hanzo.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.7,<3.0",
    "six>=1.5",
    "python-dateutil>=2.2",
    "backoff>=1.10.0",
    "distro>=1.5.0",
    "typing-extensions>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/hanzoai/insights"
Repository = "https://github.com/hanzoai/posthog-python"

[project.optional-dependencies]
langchain = ["langchain>=0.2.0"]
dev = [
    "django-stubs",
    "lxml",
    "mypy",
    "mypy-baseline",
    "types-mock",
    "types-python-dateutil",
    "types-requests",
    "types-setuptools",
    "types-six",
    "pre-commit",
    "pydantic",
    "ruff",
    "setuptools",
    "packaging",
    "wheel",
    "twine",
    "tomli",
    "tomli_w",
]
test = [
    "mock>=2.0.0",
    "freezegun==1.5.1",
    "coverage",
    "pytest",
    "pytest-timeout",
    "pytest-asyncio",
    "django",
    "openai>=2.0",
    "anthropic>=0.72",
    "langgraph>=1.0",
    "langchain-core>=1.0",
    "langchain-community>=0.4",
    "langchain-openai>=1.0",
    "langchain-anthropic>=1.0",
    "google-genai",
    "pydantic",
    "parameterized>=0.8.1",
]

[tool.setuptools]
packages = [
    "hanzo_insights",
    "hanzo_insights.ai",
    "hanzo_insights.ai.langchain",
    "hanzo_insights.ai.openai",
    "hanzo_insights.ai.openai_agents",
    "hanzo_insights.ai.anthropic",
    "hanzo_insights.ai.gemini",
    "hanzo_insights.test",
    "hanzo_insights.test.ai",
    "hanzo_insights.test.ai.openai_agents",
    "hanzo_insights.integrations",
    "insights",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["hanzo_insights/test"]
norecursedirs = ["integration_tests"]
